--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 server.port= 8085
 
 ## Spring DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
-spring.datasource.url= jdbc:mysql://localhost:3306/demo?useSSL=false&serverTimezone=UTC&useLegacyDatetimeCode=false
+spring.datasource.url= jdbc:mysql://localhost:3306/productivity?useSSL=false&serverTimezone=UTC&useLegacyDatetimeCode=false
 spring.datasource.username= root
 spring.datasource.password= 
 spring.datasource.driver.class=oracle.jdbc.driver.OracleDriver
