Created UserController and login method

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,6 +6,7 @@ spring.datasource.url= jdbc:mysql://localhost:3306/productivity?useSSL=false&ser
 spring.datasource.username= root
 spring.datasource.password= 
 spring.datasource.driver.class=oracle.jdbc.driver.OracleDriver
+server.servlet.context-path=/App
 
 ## Hibernate Properties
 
